fix: increase contrasts in FileUpload and TaskCreateFrom to improve a11y

--- a/src/app/main-pages/shared/file-upload/file-upload.component.scss
+++ b/src/app/main-pages/shared/file-upload/file-upload.component.scss
@@ -16,7 +16,7 @@ button {
 
   small {
     font-size: 14px;
-    color: $grey;
+    color: $high-contrast-grey;
     margin-bottom: 4px;
     align-self: flex-end;
   }
@@ -38,13 +38,13 @@ button {
   @include dFlex();
   font-size: 16px;
   width: 100%;
-  border: 2px dashed $grey;
+  border: 2px dashed $high-contrast-grey;
   border-radius: 12px;
   padding: 20px;
   resize: none;
-  color: $grey;
+  color: $high-contrast-grey;
   gap: 8px;
-  background-color: $hover-grey;
+  background-color: $white;
   margin-bottom: 12px;
 
   button {
