--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -8,7 +8,6 @@ $lightest-grey: #f6f7f8;
 $lighter-grey: #d1d1d1;
 $light-grey: #cdcdcd;
 $hover-grey: #eeeeee;
-$grey: #707070;
 $grey: #a8a8a8;
 $high-contrast-grey: #707070;
 $black: #000000;
